# rust-ray-tracing

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  color_util.rs  hit_record.rs  main.rs  material.rs  ray.rs  renderer.rs  scatter_info.rs  scene.rs  sphere.rs  texture.rs  vec3.rs
