[package]
name = "rust-ray-tracing"
version = "1.0.0"
edition = "2021"
authors = ["TwentyFive <twentyfivesoftware@gmail.com>"]
repository = "https://github.com/TwentyFiveSoftware/rust-ray-tracing"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[dependencies]
image = "0.24.5"
fastrand = "2.0.0"
num_cpus = "1.15.0"
clap = { version = "4.1.4", features = ["derive"] }
proc-macro2 = "1.0.51"
