[package]
name = "rust-ray-tracing"
version = "1.0.0"
edition = "2021"
authors = ["TwentyFive <twentyfivesoftware@gmail.com>"]
repository = "https://github.com/TwentyFiveSoftware/rust-ray-tracing"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[dependencies]
image = "0.25.1"
fastrand = "2.1.0"
num_cpus = "1.16.0"
clap = { version = "4.5.4", features = ["derive"] }
proc-macro2 = "1.0.81"
